Use new PeakList.getFirst to set default peak list